2003-08-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/my-lily-lexer.cc (My_lily_lexer): don't crash
	on unquoted strings before \notenames.

	* lily/parser.yy (lyric_element): allow markup as lyric text. This
	increases the number of s/r reductions to 4.

	* scm/new-markup.scm (fraction-markup): \fraction command.

	* lily/lexer.ll: allow any string without \ { }  # and " in \markup
	mode

	* lily/lookup.cc (round_filled_box): rename function.
	(LY_DEFINE): round-filled-box: change signature.

	* Documentation/user/refman.itely: revise section explaining grace
	notes.

	* lily/translator-scheme.cc (LY_DEFINE): add !

	* input/*/*.ly (vmus): use \new everywhere.

	* lily/my-lily-lexer.cc: add \accacciatura and \appoggiatura

	* ly/grace-init.ly (stopGraceMusic): add slurs on grace note by
	default

	* scm/music-functions.scm (set-stop-grace-properties)
	(set-start-grace-properties, add-grace-property): new functions
	for modular grace tweak control.

	* ly/engraver-init.ly (ScoreContext): new property graceSettings.
	
2003-08-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/INSTALL.texi: Explain install-pfa-fonts.

	* GNUmakefile.in (install-pfa-fonts):
	(get-pfa-fonts): New target.

	* stepmake/stepmake/toplevel-targets.make: Add pfa-fonts and
	install-pfa-fonts help.

2003-08-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/translator-scheme.cc (LY_DEFINE):
	ly:context-pushpop-property new function.
	(LY_DEFINE): new function ly:translator-find  
	new function ly:translator?
	(LY_DEFINE): new function ly:context?

	* lily/translator-def.cc: remove Translator_def::apply_pushpop_property().

	* python/lilylib.py (read_pipe): only store and display error log
	if verbose not set.
	(read_pipe): only display log if it contains something.

2003-08-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/misc/GNUmakefile: Re-add.
	(TEXTS): Add CHANGES.

2003-08-27  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond.words: add \newcontext.
